Inclusão de novo projeto

--- a/index.html
+++ b/index.html
@@ -355,12 +355,20 @@
             <h2>Projetos</h2>
             <div class="projeto">
                 <div class="projetos">
+                    <h2>Calculadora</h2>
+                    <p>Calculadora simples, utilizando HTML, CSS e JS.</p>
+                    <img src="https://drive.google.com/u/0/uc?id=1yZBz2Ihfx6zA-GrNRAnfw1nUmDdiD1gN&export=download" class="img-projetos">
+                    <div class="botao"></div>
+                    <a href="https://arates.github.io/clone-tela-netflix/" target="_blank" >Veja o Projeto</a>
+                    <a href="https://github.com/Arates/clone-tela-netflix" target="_blank" >Script Github</a>
+                </div>
+                <div class="projetos">
                     <h2>Jogo da Cobrinha</h2>
                     <p>Jogo da cobrinha clássico utilizando HTML, CSS e Javascript.</p>
-                    <img src="https://drive.google.com/u/0/uc?id=1ELxXFxZrjueW1j1LQL6ODKn1vSXnOMHC&export=download" class="img-projetos">
+                    <img src="https://drive.google.com/u/0/uc?id=1hrRW682Bl8Cbd5GcI0p3U4fRNIwjBIRP&export=download" class="img-projetos">
                     <div class="botao"></div>
-                    <a href="https://arates.github.io/jogo-cobrinha/" target="_blank">Veja o Projeto</a>
-                    <a href="https://github.com/Arates/jogo-cobrinha" target="_blank">Script Github</a>
+                    <a href="https://arates.github.io/calculadora/" target="_blank">Veja o Projeto</a>
+                    <a href="https://github.com/Arates/calculadora" target="_blank">Script Github</a>
                 </div>
                 <div class="projetos">
                     <h2>Tela de login Instagram</h2>
